text overflow fix

--- a/src/components/synapse-core/synapse-core.scss
+++ b/src/components/synapse-core/synapse-core.scss
@@ -142,7 +142,7 @@ body {
 	background: rgba(255,255,255,1);
 	margin: 0;
 	padding-left: 20px;
-	padding-top: 10px;
+	padding-top: 7px;
 	padding-right: 15px;
 	padding-bottom: 10px;
 	width: $cardWidth;
@@ -150,7 +150,7 @@ body {
 	resize: none;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
-	line-height: 27px;
+	line-height: 29px;
 	overflow: hidden;
 	font-weight: 300;
 	box-sizing: border-box;
